[package]
name = "nnx"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
pollster = "0.2.4"
protobuf = { version = "2", features = ["with-bytes"] }
wonnx = { git = "https://github.com/pixelspark/wonnx.git" }
image = "0.23.14"
ndarray = "0.15.4"
log = "0.4.14" 
env_logger = "0.9.0"
prettytable-rs = "^0.8"